gitops/environments/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boutique-staging
  labels:
    app.kubernetes.io/part-of: online-boutique
    environment: staging
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
