gitops/environments/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boutique-frontend
  labels:
    app.kubernetes.io/part-of: online-boutique
    environment: staging
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: boutique-staging-boutique-security-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: boutique-staging.192.168.1.8.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: boutique-security-headers
  labels:
    app.kubernetes.io/part-of: online-boutique
spec:
  headers:
    frameDeny: true
    contentTypeNosniff: true
    browserXssFilter: true
    referrerPolicy: strict-origin-when-cross-origin
    stsSeconds: 31536000
    customResponseHeaders:
      Content-Security-Policy: "default-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline' https://stackpath.bootstrapcdn.com https://fonts.googleapis.com; script-src 'self' https://stackpath.bootstrapcdn.com; font-src 'self' https://fonts.gstatic.com data:; connect-src 'self'; frame-ancestors 'none'; base-uri 'self'"
